--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </a>
             </div>
             <div id="scene">
-                <img class="water-bottle-landing" data-depth="0.3" src="assets/imgs/Illustration.png" alt="">
+                <img class="water-bottle-landing" data-depth="0.3" src="assets/imgs/Illustration.png"
+                    alt="Generosity Water photo">
             </div>
         </div>
 
@@ -51,9 +52,9 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/berry/right-sberry.png" alt="">
-                    <img class="bottle" src="assets/imgs/berry/bottle-sberry.png" alt="">
-                    <img class="left" src="assets/imgs/berry/left-sberry.png" alt="">
+                    <img class="right" src="assets/imgs/berry/right-sberry.png" alt="Strawberry Photo">
+                    <img class="bottle" src="assets/imgs/berry/bottle-sberry.png" alt="Generosity Water Photo">
+                    <img class="left" src="assets/imgs/berry/left-sberry.png" alt="Strawberry Photo">
                     <a class="explore" href="strawberry.html">Explore <ion-icon class="animated infinite bounce slow"
                             name="arrow-forward-outline">
                         </ion-icon></a>
@@ -71,10 +72,10 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/blueberry/berry-right.png" alt="">
-                    <img class="bottle" src="assets/imgs/blueberry/bottle-bb.png" alt="">
-                    <img class="left" src="assets/imgs/blueberry/berry-left.png" alt="">
-                    <a class="explore" href="">Explore <ion-icon class="animated infinite bounce slow"
+                    <img class="right" src="assets/imgs/blueberry/berry-right.png" alt="Blueberry Photo">
+                    <img class="bottle" src="assets/imgs/blueberry/bottle-bb.png" alt="Generosity water Photo">
+                    <img class="left" src="assets/imgs/blueberry/berry-left.png" alt="Blueberry Photo">
+                    <a class="explore" href="blueberry.html">Explore <ion-icon class="animated infinite bounce slow"
                             name="arrow-forward-outline">
                         </ion-icon></a>
                 </div>
@@ -91,9 +92,9 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/lemon_water/lemon_left.png" alt="">
-                    <img class="bottle" src="assets/imgs/lemon_water/bottle-lm.png" alt="">
-                    <img class="left" src="assets/imgs/lemon_water/lemon_right.png" alt="">
+                    <img class="right" src="assets/imgs/lemon_water/lemon_left.png" alt="Lemon Photo">
+                    <img class="bottle" src="assets/imgs/lemon_water/bottle-lm.png" alt="Generosity water Photo">
+                    <img class="left" src="assets/imgs/lemon_water/lemon_right.png" alt="Lemon Photo">
                     <a class="explore" href="lemon.html">Explore <ion-icon class="animated infinite bounce slow"
                             name="arrow-forward-outline">
                         </ion-icon></a>
@@ -111,10 +112,10 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/cucumber/cucumber-left.png" alt="">
-                    <img class="bottle" src="assets/imgs/cucumber/bottle-cc.png" alt="">
-                    <img class="left" src="assets/imgs/cucumber/cucumber-right.png" alt="">
-                    <a class="explore" href="">Explore <ion-icon class="animated infinite bounce slow"
+                    <img class="right" src="assets/imgs/cucumber/cucumber-left.png" alt="Cucumber Photo">
+                    <img class="bottle" src="assets/imgs/cucumber/bottle-cc.png" alt="Generosity water Photo">
+                    <img class="left" src="assets/imgs/cucumber/cucumber-right.png" alt="Cucumber Photo">
+                    <a class="explore" href="cucumber.html">Explore <ion-icon class="animated infinite bounce slow"
                             name="arrow-forward-outline">
                         </ion-icon></a>
                 </div>
@@ -131,10 +132,10 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/orange/orange-left.png" alt="">
-                    <img class="bottle" src="assets/imgs/orange/bottle-nr.png" alt="">
-                    <img class="left" src="assets/imgs/orange/orange-right.png" alt="">
-                    <a class="explore" href="">Explore <ion-icon class="animated infinite bounce slow"
+                    <img class="right" src="assets/imgs/orange/orange-left.png" alt="Orange Photo">
+                    <img class="bottle" src="assets/imgs/orange/bottle-nr.png" alt="Generosity Water Photo">
+                    <img class="left" src="assets/imgs/orange/orange-right.png" alt="Orange Photo">
+                    <a class="explore" href="orange.html">Explore <ion-icon class="animated infinite bounce slow"
                             name="arrow-forward-outline">
                         </ion-icon></a>
                 </div>
