--- a/cucumber.html
+++ b/cucumber.html
@@ -26,7 +26,7 @@
         </nav>
         <div class="section">
             <div class="flavor-section fs-v2">
-                <h1 class="title">Alkaline water infused with <span class="color1 color">strawberry</span> essence</h1>
+                <h1 class="title">Alkaline water infused with <span class="color4 color">cucumber</span> essence</h1>
                 <div class="calories">
                     <p>0</p>
                     <div>
@@ -35,17 +35,17 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/berry/right-sberry.png" alt="Strawberry photo">
-                    <img class="bottle" src="assets/imgs/berry/bottle-sberry.png" alt="Generosity Bottle">
-                    <img class="left" src="assets/imgs/berry/left-sberry.png" alt="Strawberry photo">
+                    <img class="right" src="assets/imgs/cucumber/cucumber-left.png" alt="Cucumber Photo">
+                    <img class="bottle" src="assets/imgs/cucumber/bottle-cc.png" alt="Generosity water Photo">
+                    <img class="left" src="assets/imgs/cucumber/cucumber-right.png" alt="Cucumber Photo">
                 </div>
             </div>
         </div>
     </section>
     <div class="item-info">
         <div class="item-info-desc">
-            <h2 class="item-title-desc">Strawberry Generosity Water</h2>
-            <p class="item-title-text">Pure flavored water, with delicious strawberry and other natural flavors</p>
+            <h2 class="item-title-desc">Cucumber Generosity Water</h2>
+            <p class="item-title-text">Pure flavored water, with delicious cucumber and other natural flavors</p>
             <ul class="item-title-list">
                 <li>zero diet sweeteners</li>
                 <li>zero calories</li>
@@ -84,15 +84,13 @@
         <p class="daily">Daily values are based on a 2,000 calorie diet.</p>
     </div>
     <div class="benefits-item">
-        <h2 class="bn-item-title">The Power of Strawberry</h2>
-        <p class="bn-item-desc">Strawberries are bright red, juicy, and sweet. They're an excellent source of vitamin C
-            and manganese and also contain
-            decent amounts of folate (vitamin B9) and potassium. Strawberries are very rich in antioxidants and plant
-            compounds,
-            which may have benefits for heart health and blood sugar control</p>
+        <h2 class="bn-item-title">The Power of Cucumber</h2>
+        <p class="bn-item-desc">Cucumbers consist mostly of water, and they also contain important electrolytes. They
+            can help prevent dehydration in
+            hot weather or after a workout.</p>
     </div>
-    <div class="next-item">
-        <a href="blueberry.html">NEXT - Blueberry Flavor</a>
+    <div class="next-item" id="next-orange">
+        <a href="orange.html">NEXT - Orange Flavor</a>
     </div>
     <div class="footer">
         <div class="contact" id="contact">
