--- a/lemon.html
+++ b/lemon.html
@@ -21,7 +21,7 @@
             </div>
             <ul class="nav-container">
                 <li><a href="index.html">Products</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="mailto: info@generosity.com">Contact</a></li>
             </ul>
         </nav>
         <div class="section">
@@ -82,7 +82,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>Daily values are based on a 2,000 calorie diet.</p>
+        <p class="daily">Daily values are based on a 2,000 calorie diet.</p>
     </div>
     <div class="benefits-item">
         <h2 class="bn-item-title">The Power of Lemon</h2>
@@ -93,8 +93,8 @@
             digestive issues, and
             cancer.</p>
     </div>
-    <div class="next-item">
-        <a href="">NEXT - Cucumber Flavor</a>
+    <div class="next-item" id="next-cucumber">
+        <a href="cucumber.html">NEXT - Cucumber Flavor</a>
     </div>
     <div class="footer">
         <div class="contact" id="contact">
@@ -118,7 +118,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="animation.js"></script>
 </body>
 
