--- a/orange.html
+++ b/orange.html
@@ -26,7 +26,7 @@
         </nav>
         <div class="section">
             <div class="flavor-section fs-v2">
-                <h1 class="title">Alkaline water infused with <span class="color1 color">strawberry</span> essence</h1>
+                <h1 class="title">Alkaline water infused with <span class="color5 color">orange</span> essence</h1>
                 <div class="calories">
                     <p>0</p>
                     <div>
@@ -35,17 +35,17 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img class="right" src="assets/imgs/berry/right-sberry.png" alt="Strawberry photo">
-                    <img class="bottle" src="assets/imgs/berry/bottle-sberry.png" alt="Generosity Bottle">
-                    <img class="left" src="assets/imgs/berry/left-sberry.png" alt="Strawberry photo">
+                    <img class="right" src="assets/imgs/orange/orange-left.png" alt="Orange Photo">
+                    <img class="bottle" src="assets/imgs/orange/bottle-nr.png" alt="Generosity Water Photo">
+                    <img class="left" src="assets/imgs/orange/orange-right.png" alt="Orange Photo">
                 </div>
             </div>
         </div>
     </section>
     <div class="item-info">
         <div class="item-info-desc">
-            <h2 class="item-title-desc">Strawberry Generosity Water</h2>
-            <p class="item-title-text">Pure flavored water, with delicious strawberry and other natural flavors</p>
+            <h2 class="item-title-desc">Orange Generosity Water</h2>
+            <p class="item-title-text">Pure flavored water, with delicious orange and other natural flavors</p>
             <ul class="item-title-list">
                 <li>zero diet sweeteners</li>
                 <li>zero calories</li>
@@ -84,15 +84,14 @@
         <p class="daily">Daily values are based on a 2,000 calorie diet.</p>
     </div>
     <div class="benefits-item">
-        <h2 class="bn-item-title">The Power of Strawberry</h2>
-        <p class="bn-item-desc">Strawberries are bright red, juicy, and sweet. They're an excellent source of vitamin C
-            and manganese and also contain
-            decent amounts of folate (vitamin B9) and potassium. Strawberries are very rich in antioxidants and plant
-            compounds,
-            which may have benefits for heart health and blood sugar control</p>
+        <h2 class="bn-item-title">The Power of Oranges</h2>
+        <p class="bn-item-desc">Oranges are known for their vitamin C content, a powerful antioxidant that helps protect
+            cells from damage. One medium
+            orange will provide the NRV (nutrient reference value) of vitamin C for adults. Oranges are also a good
+            source of fibre, B vitamins, vitamin A, calcium and potassium.</p>
     </div>
-    <div class="next-item">
-        <a href="blueberry.html">NEXT - Blueberry Flavor</a>
+    <div class="next-item" id="next-strawberry">
+        <a href="strawberry.html">NEXT - Strawberry Flavor</a>
     </div>
     <div class="footer">
         <div class="contact" id="contact">
